[package]
name = "codebattle_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
actix-web = "4.5.1"
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
temp-dir = "0.1.12"
tokio = { version = "1.36.0", features = ["process", "net", "rt", "rt-multi-thread", "macros"] }
