[package]
name = "codebattle_runner"
version = "1.5.2"
edition = "2024"

[dependencies]
anyhow = "1.0.80"
actix-web = "4.5.1"
duration-str = "0.7.1"
env_logger = "0.11.2"
log = "0.4.20"
nix = { version = "0.29.0", features = ["fs", "mount", "sched", "signal"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
signal-hook = "0.3.17"
tokio = { version = "1.36.0", features = ["process", "net", "rt", "rt-multi-thread", "time", "macros"] }
uuid = { version = "1.7.0", features = ["v4"] }
